--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <li>Lipstick</li>
                                 <li>Lip Liner</li>
                                 <li>EyeLiner</li>
-                                <li>Kajal</li>
+                                <li>Kajals</li>
                                 <li>Eyeshadow</li>
                                 <li>Foundation</li>
                                 <li>Primer</li>
